src/App.css
* {
    color: white;
}

body {
    margin: 0;
    padding: 0;
    background-color: rgb(24, 24, 26);
}

.App {
    text-align: center;
    width: 100%;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    background-color: rgb(24, 24, 26);
}

.buttonAndMonthNameContainer {
    width: 100%;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
}

.monthContainer {
    width: 100%;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    margin-top:2%;
}

.individualDay {
    width: 140px;
    height: 193px;
    border: 1px solid black;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    color: white;
    background-color: #303030;
    align-items: flex-start;
    background-repeat: no-repeat;
    background-size: 100% 100%;
    font-weight: bold;
    font-family: 'Titillium Web', sans-serif;
    margin: 1.5% 0 1.5% 0;
    cursor: pointer;
}

.collectionOfDays {
    width: 14%;
    height: 95%;
    padding: 0;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    flex-direction: column;
}

.currentlySelectedMonth {
    width: 150px;
    height: 45px;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    font-family: 'Titillium Web', sans-serif;
    font-size: 2em;
}

.youtubeContainer {
    margin-bottom: 50px;
}

.title {
    font-size: 3em;
    color: white;
    font-family: 'Titillium Web', sans-serif;
}

.titleDesc {
    font-size: 1.5em;
    color: white;
    font-family: 'Libre Franklin', sans-serif;
}

.dayOfWeek {
    color: white;
}

.dateOfDay {
    color: white;
    font-size: 25px;
    font-family: 'Titillium Web', sans-serif;
    font-weight: bold;
    padding: 5px;
}

.movieInfoContainer {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    width: 100%;
    font-size: 20px;
    font-family: 'Libre Franklin', sans-serif;
    flex-direction: column;
    background-color: rgb(24, 24, 26);
    z-index: 1;
}

.movieDescPosterContainer {
    box-sizing: border-box;
    content: '';
    left: 0;
    right: 0;
    width: 100%;
    z-index: -1;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: 50% 50%;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    box-shadow: inset 0 0 0 1000px rgba(0, 0, 10, 0.7);
    border-bottom: 4px solid white;
    border-top: 4px solid white;
}

.movieInfo {
    width: 100%;
}

.button {
    height: 50px;
    width: 75px;
    position: absolute;
    top: 0px;
    right: 0px;
    border-radius: 4px;
    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
    background-color: #fc430a;
    border-color: white;
    font-family: 'Titillium Web', sans-serif;
}

.bgWrapper {
    content: '';
    left: 0;
    right: 0;
    width: 100%;
    height: 380px;
    z-index: -1;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: 50% 50%;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    box-shadow: inset 0 0 0 1000px rgba(0, 0, 10, 0.6);
}

.movieTitle {
    font-size: 5em;
    font-family: 'Titillium Web', sans-serif;
    font-weight: bold;
    color: white;
}

.poster {
    width: 300px;
    height: 450px;
}

.posterContainer {
    margin: 2%;
}

.actor {
    text-align: left;
    box-sizing: border-box;
    margin-right: 1.5%;
}

.castAndCrewContainer {
    width: 100%;
}

.cast {
    text-align: left;
}

.descriptionContainer {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    margin: 2%;
}

#directedBy {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
}

.buttonMonthContainer {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    margin-top:3%;
}

.calendarContainer {
    width: 100%;
    height: 100%;
}

.monthButton {
    width: 109px;
    height: 45px;
}

.leftMonthButton {
    display: inline-block;
    text-align: center;
    width: 5em;
    height: 5em;
    border: 0.5em solid #333;
    border-radius: 50%;
    margin-left: 1.5em;

}

.overview {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    text-align: left;
    margin: 0 0 0 0;
}

#starring {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
}

.director {
    text-align: left;
}

.leftMonthButton:after {
    content: '';
    display: inline-block;
    margin-top: 0.5em;
    text-align: center;
    margin-left: 0.4em;
    width: 1.4em;
    height: 1.4em;
    border-top: 0.5em solid #333;
    border-right: 0.5em solid #333;
    -webkit-transform: rotate(-135deg);
    -ms-transform: rotate(-135deg);
    transform: rotate(-135deg);
}

.rightMonthButton {
    display: inline-block;
    text-align: center;
    width: 5em;
    height: 5em;
    border: 0.5em solid #333;
    border-radius: 50%;
    margin-right: 1.5em;

}

.rightMonthButton:after {
    content: '';
    display: inline-block;
    margin-top: 0.5em;
    text-align: center;
    margin-left: -0.4em;
    width: 1.4em;
    height: 1.4em;
    border-top: 0.5em solid #333;
    border-right: 0.5em solid #333;
    -webkit-transform: rotate(-135deg);
    -ms-transform: rotate(-135deg);
    transform: rotate(45deg);
}

.leftMonthButton:hover, .rightMonthButton:hover {
    border: 0.5em solid #e74c3c;
    cursor: pointer;
}

@media only screen and (max-device-width: 992px) {
    .individualDay {
        width: 120px;
        height: 160px;
    }
}

@media only screen and (max-device-width: 792px) {
    .individualDay {
        width: 105px;
        height: 150px;
    }

    .movieDescPosterContainer {
        flex-direction: column;
    }

    .button {
        position: fixed;
        bottom: 0px;
        margin-right: auto;
        margin-left: auto;
        left: 0px;
        right: 0px;
        border-radius: 4px;
        text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
        background-color: #fc430a;
        border-color: white;
        font-family: 'Titillium Web', sans-serif;
        top: initial;
    }
}

@media only screen and (max-device-width: 704px) {
    .individualDay {
        width: 80px;
        height: 120px;
    }
}

@media only screen and (max-device-width: 584px) {
    .individualDay {
        width: 60px;
        height: 85px;
    }

    .dateOfDay {
        font-size: 12px;
        padding: 3px;
    }
}

@media only screen and (max-device-width: 442px) {
    .individualDay {
        width: 50px;
        height: 75px;
    }

    .dateOfDay {
        font-size: 12px;
        padding: 3px;
    }

    .monthContainer{
        margin-top:5%;
    }
}

@media only screen and (max-device-width: 390px) {
    .individualDay {
        width: 52px;
        height: 70px;
    }

    .dateOfDay {
        font-size: 12px;
        padding: 3px;
    }
}

@media only screen and (max-device-width: 355px) {
    .individualDay {
        width: 45px;
    }

    .dateOfDay {
        font-size: 12px;
        padding: 3px;
    }
}

@media only screen and (max-device-width: 325px) {
    .individualDay {
        width: 40px;
    }

    .dateOfDay {
        font-size: 12px;
        padding: 3px;
    }
}

